fixed small carousel on mobile by removing the props and styling in sass

--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -7,10 +7,11 @@
 
     .hero
         justify-content: center
+        width: 50%
 
         @media screen and (min-width:300px)
             height: auto
-            width: 50%
+            width: 100%
 
     .news
 
